@@ -1,4 +1,7 @@
-2008-01-04  Andreas K. Foerster  <info@akfoerster.de>
+2008-01-08  Andreas K. Foerster  <info@akfoerster.de>
+
+	* akfavatar.h, avatar.c (avt_put_character):
+	new function
 
 	* avatarsay.c:
 	ability to run lineoriented programs (not for Windows)
